# tripici

./: .gitignore  CLAUDE.md  DEPLOY.md  ROADMAP.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 60ad184bcd3a_add_user_table_and_fk_trip_owner.py  7945d8dc809f_create_trips_table.py  7b5d436b4613_add_memberships_and_invitations.py  a2b9e5c8d3f4_add_plan_link.py  b7d3f1a9c2e5_add_plan_start_time.py  c3e8b1f6a4d9_add_plan_location.py  c4e1a7d9b2f3_add_expense_paid_by_user.py  d4f9a2c7e1b8_add_trip_date_range.py  d5f2b8c1a3e7_add_settlement_payment.py  e7a1b93c5d24_add_expense_name.py  e8a3f6b2c9d1_add_plan.py  f1c7d4a8e6b2_link_plan_expense.py  f697cf6f8b97_add_categories_and_expenses.py
backend/app/: main.py
backend/app/api/: auth.py  categories.py  cover.py  expenses.py  health.py  invitations.py  members.py  plans.py  share.py  stats.py  trips.py
backend/app/core/: auth.py  config.py  db.py
backend/app/domain/categories/: entity.py
backend/app/domain/cover/: destination.py  entity.py  ports.py  service.py
backend/app/domain/expenses/: entity.py  ports.py  service.py
backend/data/: trips_seed.json
backend/docker/: init.sql
backend/scripts/: import_trips.py
backend/tests/: conftest.py  test_auth_api.py  test_categories_api.py  test_cover_api.py  test_expenses_api.py  test_global_stats_api.py  test_invitations_api.py  test_members_api.py  test_plans_api.py  test_settlement_api.py  test_share_api.py  test_stats_api.py  test_trips_api.py
(+180 files in other folders)
