[project]
name = "tripinci-backend"
version = "0.1.0"
description = "Tripinci backend — FastAPI app for shared trip expenses."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.115",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
# Async fixtures and tests don't need explicit @pytest.mark.asyncio
# decorators with this mode.
asyncio_mode = "auto"
